// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Telmisartan Integration Test parses telmisartan 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "2": "N",
            "5": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Telmisartan Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null], branchDepths: [0, 0, 0, 2, 2] });
export const v3 = v2.substitute(2, 'N');
export const v4 = v3.substitute(5, 'N');
export const v5 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 2, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 1, 1, 2, 2] });
export let v6 = v4.fuse(v5, 2);
export const v7 = Ring({ atoms: 'C', size: 5, ringNumber: 5, bonds: ['=', null, '=', null, null] });
export const v8 = v7.substitute(2, 'N');
export const v9 = v8.substitute(5, 'N');
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null], branchDepths: [2, 2, 2, 2, 3, 3] });
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 6, offset: 2, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Ring({ atoms: 'C', size: 6, ringNumber: 4, offset: 6, bonds: ['=', null, '=', null, '=', null] });
export const v13 = Linear(['O'], ['=']);
v6 = v6.addSequentialRings([v9, v10, v11, v12], { depths: [1, 2, 1, 2], chainAtoms: [{ atom: 'C', depth: 2, position: 'before' }, { atom: 'C', depth: 2, position: 'after', attachments: [v13] }, { atom: 'O', depth: 2, position: 'after' }, { atom: 'C', depth: 1, position: 'after' }] });
export const v14 = Linear(['C']);
export const v15 = Molecule([v1, v6, v14]);"
`;

exports[`Losartan Integration Test parses losartan 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {
        "3": [
          {
            "atoms": [
              "Cl",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
        "4": [
          {
            "atoms": [
              "C",
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        "=",
        null,
        "=",
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 5,
      "substitutions": {
        "2": "N",
        "5": "N",
      },
      "type": "ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 2,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "N",
      "attachments": {},
      "bonds": [
        "=",
        null,
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 4,
      "size": 5,
      "substitutions": {
        "1": "C",
      },
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Losartan Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v3 = v2.substitute(2, 'N');
export const v4 = v3.substitute(5, 'N');
export const v5 = Linear(['Cl']);
export const v6 = v4.attach(v5, 3);
export const v7 = Linear(['C', 'O']);
export const v8 = v6.attach(v7, 4);
export const v9 = Linear(['C']);
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 1, 1] });
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Ring({ atoms: 'N', size: 5, ringNumber: 4, bonds: ['=', null, null, '=', null] });
export const v13 = v12.substitute(1, 'C');
export const v14 = Molecule([v1, v8, v9, v10, v11, v13]);"
`;

exports[`Valsartan Integration Test parses valsartan 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "5": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
    "6": [
      {
        "components": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": "C",
            "attachments": {},
            "bonds": [
              "=",
              null,
              "=",
              null,
              "=",
              null,
            ],
            "offset": 0,
            "ringNumber": 1,
            "size": 6,
            "substitutions": {},
            "type": "ring",
          },
          {
            "rings": [
              {
                "atoms": "C",
                "attachments": {},
                "bonds": [
                  "=",
                  null,
                  "=",
                  null,
                  "=",
                  null,
                ],
                "offset": 0,
                "ringNumber": 2,
                "size": 6,
                "substitutions": {},
                "type": "ring",
              },
            ],
            "type": "fused_ring",
          },
        ],
        "type": "molecule",
      },
    ],
    "7": [
      {
        "atoms": [
          "C",
          "C",
        ],
        "attachments": {
          "1": [
            {
              "atoms": [
                "C",
              ],
              "attachments": {},
              "bonds": [
                null,
              ],
              "type": "linear",
            },
          ],
        },
        "bonds": [
          null,
          null,
        ],
        "type": "linear",
      },
    ],
    "8": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Valsartan Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'N', 'C', 'C', 'O']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(v2, 5);
export const v4 = Linear(['C']);
export const v5 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [1, 1, 1, 1, 2, 2] });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: ['=', null, '=', null, '=', null] });
v6.metaUseInterleavedCodegen = true;
v6.metaPositions = [14, 15, 16, 17, 18, 19];
v6.metaStart = 14;
v6.metaEnd = 19;
export const v7 = Ring({ atoms: 'N', size: 5, ringNumber: 3, bonds: ['=', null, null, '=', null] });
export const v8 = v7.substitute(1, 'C');
v8.metaPositions = [20, 21, 22, 23, 24];
v8.metaStart = 20;
v8.metaEnd = 24;
v6.metaSequentialRings = [v8];
v6.metaAllPositions = [14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24];
v6.metaBranchDepthMap = new Map([[14, 1], [15, 1], [16, 1], [17, 1], [18, 1], [19, 1], [20, 1], [21, 1], [22, 1], [23, 1], [24, 1]]);
v6.metaAtomValueMap = new Map([[14, 'C'], [15, 'C'], [16, 'C'], [17, 'C'], [18, 'C'], [19, 'C'], [20, 'C'], [21, 'N'], [22, 'N'], [23, 'N'], [24, 'N']]);
v6.metaBondMap = new Map([[15, '='], [17, '='], [19, '='], [21, '='], [24, '=']]);
export const v9 = Molecule([v4, v5, v6]);
export const v10 = v3.attach(v9, 6);
export const v11 = Linear(['C', 'C']);
export const v12 = Linear(['C']);
export const v13 = v11.attach(v12, 1);
export const v14 = v10.attach(v13, 7);
export const v15 = Linear(['O'], ['=']);
export const v16 = v14.attach(v15, 8);"
`;

exports[`Irbesartan Integration Test parses irbesartan 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 5,
          "substitutions": {
            "2": "N",
            "5": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 2,
          "ringNumber": 2,
          "size": 5,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 3,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "C",
      "attachments": {},
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 4,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": "N",
      "attachments": {},
      "bonds": [
        "=",
        null,
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 5,
      "size": 5,
      "substitutions": {
        "1": "C",
      },
      "type": "ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Irbesartan Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, null, null, null] });
export const v3 = v2.substitute(2, 'N');
export const v4 = v3.substitute(5, 'N');
export const v5 = Linear(['O'], ['=']);
export const v6 = v4.attach(v5, 4);
export const v7 = Ring({ atoms: 'C', size: 5, ringNumber: 2, offset: 2, branchDepths: [0, 1, 1, 1, 1] });
export const v8 = v6.fuse(v7, 2);
v8.rings[0].metaPositions = [4, 5, 6, 11, 13];
v8.rings[0].metaStart = 4;
v8.rings[0].metaEnd = 13;
v8.rings[1].metaPositions = [6, 7, 8, 9, 10];
v8.rings[1].metaStart = 6;
v8.rings[1].metaEnd = 10;
v8.metaAllPositions = [4, 5, 6, 7, 8, 9, 10, 11, 13];
v8.metaBranchDepthMap = new Map([[4, 0], [5, 0], [6, 0], [7, 1], [8, 1], [9, 1], [10, 1], [11, 0], [13, 0]]);
v8.metaAtomValueMap = new Map([[4, 'C'], [5, 'N'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [13, 'N']]);
v8.metaBondMap = new Map([[5, '=']]);
v8.metaRingOrderMap = new Map([[4, [1, 1]], [5, [1]], [6, [2, 2, 1]], [7, [2]], [8, [2]], [9, [2]], [10, [2]], [11, [1]], [13, [1]]]);
export const v9 = Linear(['C']);
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 1, 1] });
export const v11 = Ring({ atoms: 'C', size: 6, ringNumber: 4, bonds: ['=', null, '=', null, '=', null] });
export const v12 = Ring({ atoms: 'N', size: 5, ringNumber: 5, bonds: ['=', null, null, '=', null] });
export const v13 = v12.substitute(1, 'C');
export const v14 = Molecule([v1, v8, v9, v10, v11, v13]);"
`;
